# pyrefly

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  debug.html  package-lock.json  rustfmt.toml  test.py  version.bzl
crates/tsp_types/: Cargo.toml
crates/tsp_types/protocol_generator/: generate_protocol.py  tsp.json  tsp.schema.json
crates/tsp_types/src/: common.rs  lib.rs  protocol.rs
crates/tsp_types/tests/: combine_types.rs  flags_smoke.rs  get_builtin_type.rs  get_diagnostics.rs  get_diagnostics_version.rs  get_docstring.rs  get_function_parts.rs  get_matching_overloads.rs  get_metaclass.rs  get_overloads.rs  get_repr.rs  get_snapshot.rs  get_supported_protocol_version.rs  get_symbol.rs  get_symbols_for_file.rs  get_symbols_for_node.rs  get_symbols_for_type.rs  get_type.rs  get_type_alias_info.rs  get_type_args.rs  get_type_attributes.rs  mod.rs  resolve_import_declaration.rs  search_for_type_attribute.rs
pyrefly/: Cargo.toml  README.md  notes-after-pycon-eg-determinism.md  pyproject.toml  pyrefly.dotslash.py  rust-toolchain
pyrefly/lib/: compat.rs  config.rs  deprecation.rs  dunder.rs  lib.rs  metadata.rs  playground.rs  query.rs  suggest.rs  sys_info.rs
pyrefly/lib/alt/: answers.rs  answers_solver.rs  attr.rs  call.rs  callable.rs  debugging.rs  expr.rs  function.rs  mod.rs  narrow.rs  operators.rs  overload.rs  solve.rs  special_calls.rs  specials.rs  subscript.rs  traits.rs  unwrap.rs
pyrefly/lib/alt/class/: base_class.rs  class_field.rs  class_metadata.rs  classdef.rs  dataclass.rs  django.rs  enums.rs  mod.rs  named_tuple.rs  new_type.rs  pydantic.rs  pydantic_lax.rs  targs.rs  total_ordering.rs  tparams.rs  tuple.rs  typed_dict.rs  variance_inference.rs
pyrefly/lib/alt/types/: abstract_class.rs  class_bases.rs  class_metadata.rs  class_validation.rs  decorated_function.rs  legacy_lookup.rs  mod.rs  pydantic.rs
pyrefly/lib/binding/: base_class.rs  binding.rs  bindings.rs  class.rs  django.rs  expr.rs  flow_ops.rs  function.rs  mod.rs  narrow.rs  pattern.rs  pydantic.rs  scope.rs  stmt.rs  table.rs  target.rs
pyrefly/lib/buck/: mod.rs
pyrefly/lib/commands/: all.rs  autotype.rs  buck_check.rs  check.rs  config_args.rs  config_finder.rs  config_migration.rs  dump_config.rs  files.rs  globs_and_config_getter.rs  infer.rs  init.rs  lsp.rs  mod.rs  report.rs  run.rs  suppress.rs  tsp.rs  util.rs
pyrefly/lib/common/: files.rs  mod.rs  symbol_kind.rs
pyrefly/lib/config/: base.rs  config.rs  config_utils.rs  environment.rs  error.rs  error_kind.rs  finder.rs  mod.rs  mypy.rs  pyright.rs  util.rs
pyrefly/lib/config/environment/: active_environment.rs  conda.rs  environment.rs  finder.rs  interpreters.rs  mod.rs  venv.rs
pyrefly/lib/config/migration/: config_option_migrater.rs  error_codes.rs  ignore_missing_imports.rs  mod.rs  project_excludes.rs  project_includes.rs  pyright.rs  python_interpreter.rs  python_platform.rs  python_version.rs  replace_imports.rs  search_path.rs  sub_configs.rs  untyped_def_behavior.rs  use_untyped_imports.rs  utils.rs
pyrefly/lib/config/mypy/: ini.rs  mod.rs  pyproject.rs  (+1 more)
pyrefly/lib/error/: baseline.rs  collector.rs  context.rs  display.rs  error.rs  expectation.rs  kind.rs  legacy.rs  mod.rs  summarise.rs  summarize.rs  suppress.rs
pyrefly/lib/export/: definitions.rs  deprecation.rs  docstring.rs  exports.rs  mod.rs  special.rs
pyrefly/lib/graph/: calculation.rs  index.rs  index_map.rs
pyrefly/lib/lsp/: build_system.rs  lsp.rs  mod.rs  module_helpers.rs  queue.rs  server.rs  transaction_manager.rs  workspace.rs
pyrefly/lib/lsp_features/: hover.rs  mod.rs  will_rename_files.rs
pyrefly/lib/module/: bundled.rs  display.rs  finder.rs  ignore.rs  mod.rs  module_info.rs  module_name.rs  module_path.rs  parse.rs  short_identifier.rs  source_db.rs  third_party.rs  typeshed.rs  typeshed_third_party.rs  wildcard.rs
pyrefly/lib/python/: dunder.rs  mod.rs  sys_info.rs
pyrefly/lib/report/: binding_memory.rs  debug_info.rs  mod.rs  trace.rs
pyrefly/lib/ruff/: ast.rs  mod.rs  visitors.rs
pyrefly/lib/solver/: solver.rs  subset.rs  type_order.rs
pyrefly/lib/state/: epoch.rs  errors.rs  handle.rs  ide.rs  load.rs  loader.rs  lsp.rs  lsp_attributes.rs  memory.rs  mod.rs  notebook.rs  require.rs  semantic_tokens.rs  state.rs  steps.rs  subscriber.rs
pyrefly/lib/test/: abstract_class_instantiation.rs  abstract_methods.rs  assign.rs  attribute_narrow.rs  attributes.rs  callable.rs  calls.rs  class_keywords.rs  class_overrides.rs  class_subtyping.rs  class_super.rs  constructors.rs  contextual.rs  cycles.rs  dataclass_transform.rs  dataclasses.rs  decorators.rs  delayed_inference.rs  descriptors.rs  dict.rs  enums.rs  flow.rs  flow_branching.rs  flow_looping.rs  generic_basic.rs  generic_legacy.rs  generic_restrictions.rs  generic_sub.rs  imports.rs  incremental.rs  index_narrow.rs  inference.rs  legacy_generic.rs  literal.rs  metadata.rs  mod.rs  mro.rs  named_tuple.rs  narrow.rs  natural.rs  (+26 more)
pyrefly/lib/tsp/: server.rs
pyrefly/lib/types/: alias.rs  annotation.rs  callable.rs  class.rs  display.rs  equality.rs  facet.rs  globals.rs  keywords.rs  lit_int.rs  literal.rs  lsp.rs  mod.rs  module.rs  param_spec.rs  qname.rs  quantified.rs  read_only.rs  simplify.rs  special_form.rs  stdlib.rs  tuple.rs  type_info.rs  type_var.rs  type_var_tuple.rs  typed_dict.rs  types.rs
pyrefly/lib/util/: args.rs  display.rs  fs_anyhow.rs  fs_upward_search.rs  globs.rs  lock.rs  locked_map.rs  memory.rs  mod.rs  notify_watcher.rs  prelude.rs  ruff_visitors.rs  task_heap.rs  test_path.rs  thread_pool.rs  trace.rs  upward_search.rs  visit.rs  watcher.rs  watchman.rs
pyrefly/python/pyrefly/: __init__.py  __main__.py
pyrefly_wasm/: Cargo.toml  README.md  build.sh  lib.rs  rust-toolchain
(+599 files in other folders)
