[patch.crates-io]
cxx = { git = "https://github.com/facebookexperimental/cxx.git", rev = "870ebbecad0f6be394d4f9fb9bd62b551662651a" }
cxx-build = { git = "https://github.com/facebookexperimental/cxx.git", rev = "870ebbecad0f6be394d4f9fb9bd62b551662651a" }
displaydoc = { git = "https://github.com/yaahc/displaydoc", rev = "7dc6e324b1788a6b7fb9f3a1953c512923a3e9f0" }
quickcheck = { git = "https://github.com/jakoschiko/quickcheck", rev = "6ecdf5bb4b0132ce66670b4d46453aa022ea892c" }

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = [
  "crates/pyrefly_build",
  "crates/pyrefly_bundled",
  "crates/pyrefly_config",
  "crates/pyrefly_derive",
  "crates/pyrefly_python",
  "crates/pyrefly_types",
  "crates/pyrefly_util",
  "crates/tsp_types",
  "pyrefly",
  "pyrefly_wasm",
]
resolver = "2"

[workspace.package]
license = "MIT"
repository = "https://github.com/facebook/pyrefly"
