[package]
name = "tsp_types"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Type Server Protocol (TSP) type definitions and common utilities"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lsp-types = "0.94"
lsp-server = "0.7"

[dev-dependencies]
pretty_assertions = "1.2"
